[gd_scene load_steps=2 format=2]

[ext_resource path="res://interface/SettingsEditScreen.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ConfirmIFIDReset" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0
window_title = "Are you sure?"
dialog_text = "Are you sure you want to reset the IFID for your storyworld?"
dialog_autowrap = true

[node name="Scroll" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
scroll_horizontal_enabled = false

[node name="VBC" type="VBoxContainer" parent="Scroll"]
margin_right = 512.0
margin_bottom = 650.0
rect_min_size = Vector2( 512, 0 )

[node name="MetadataLabel" type="Label" parent="Scroll/VBC"]
visible = false
margin_right = 512.0
margin_bottom = 14.0
text = "Storyworld metadata:"

[node name="SWTitleLabel" type="Label" parent="Scroll/VBC"]
margin_right = 512.0
margin_bottom = 14.0
hint_tooltip = "The title of your storyworld."
mouse_filter = 1
text = "Title:"

[node name="TitleEdit" type="LineEdit" parent="Scroll/VBC"]
margin_top = 18.0
margin_right = 512.0
margin_bottom = 42.0
rect_min_size = Vector2( 256, 0 )
caret_blink = true
caret_blink_speed = 0.5

[node name="SWAuthorLabel" type="Label" parent="Scroll/VBC"]
margin_top = 46.0
margin_right = 512.0
margin_bottom = 60.0
hint_tooltip = "The storyworld's author or authors."
mouse_filter = 1
text = "Author:"

[node name="AuthorEdit" type="LineEdit" parent="Scroll/VBC"]
margin_top = 64.0
margin_right = 512.0
margin_bottom = 88.0
rect_min_size = Vector2( 256, 0 )
caret_blink = true
caret_blink_speed = 0.5

[node name="AboutTextLabel" type="Label" parent="Scroll/VBC"]
margin_top = 92.0
margin_right = 512.0
margin_bottom = 106.0
hint_tooltip = "A blurb for your storyworld that players can access from the main menu."
mouse_filter = 1
text = "About Text:"

[node name="AboutTextEdit" type="TextEdit" parent="Scroll/VBC"]
margin_top = 110.0
margin_right = 512.0
margin_bottom = 366.0
rect_min_size = Vector2( 0, 256 )
hint_tooltip = "A blurb for your storyworld that players can access from the main menu."
mouse_filter = 1
highlight_current_line = true
syntax_highlighting = true
wrap_enabled = true

[node name="MetaDescriptionLabel" type="Label" parent="Scroll/VBC"]
margin_top = 370.0
margin_right = 512.0
margin_bottom = 384.0
hint_tooltip = "Meta descriptions can be used by search engines to summarize a web page when including it in search results."
mouse_filter = 1
text = "Meta Description:"

[node name="MetaDescriptionEdit" type="LineEdit" parent="Scroll/VBC"]
margin_top = 388.0
margin_right = 512.0
margin_bottom = 412.0
rect_min_size = Vector2( 256, 0 )
hint_tooltip = "Meta descriptions can be used by search engines to summarize a web page when including it in search results."
mouse_filter = 1
max_length = 160

[node name="LanguageLabel" type="Label" parent="Scroll/VBC"]
margin_top = 416.0
margin_right = 512.0
margin_bottom = 430.0
text = "Language:"

[node name="LanguageEdit" type="OptionButton" parent="Scroll/VBC"]
margin_top = 434.0
margin_right = 512.0
margin_bottom = 454.0

[node name="RatingLabel" type="Label" parent="Scroll/VBC"]
margin_top = 458.0
margin_right = 512.0
margin_bottom = 472.0
text = "Rating:"

[node name="RatingEdit" type="OptionButton" parent="Scroll/VBC"]
margin_top = 476.0
margin_right = 512.0
margin_bottom = 496.0

[node name="ThemeLabel" type="Label" parent="Scroll/VBC"]
margin_top = 500.0
margin_right = 512.0
margin_bottom = 514.0
text = "Default Interface Theme:"

[node name="ThemeEdit" type="OptionButton" parent="Scroll/VBC"]
margin_top = 518.0
margin_right = 512.0
margin_bottom = 538.0

[node name="FontLabel" type="Label" parent="Scroll/VBC"]
margin_top = 542.0
margin_right = 512.0
margin_bottom = 556.0
text = "Default Font Size:"

[node name="FontEdit" type="OptionButton" parent="Scroll/VBC"]
margin_top = 560.0
margin_right = 512.0
margin_bottom = 580.0

[node name="HBC1" type="HBoxContainer" parent="Scroll/VBC"]
visible = false
margin_top = 118.0
margin_right = 317.0
margin_bottom = 138.0

[node name="IFIDDisplay" type="Label" parent="Scroll/VBC/HBC1"]
margin_top = 3.0
margin_bottom = 17.0

[node name="IFIDResetButton" type="Button" parent="Scroll/VBC/HBC1"]
margin_left = 4.0
margin_right = 118.0
margin_bottom = 20.0
text = "Create new IFID"

[node name="HBC2" type="HBoxContainer" parent="Scroll/VBC"]
margin_top = 584.0
margin_right = 512.0
margin_bottom = 624.0

[node name="DBMLabel" type="Label" parent="Scroll/VBC/HBC2"]
margin_top = 13.0
margin_right = 288.0
margin_bottom = 27.0
text = "Enable debug mode when compiling to html?"

[node name="DBMSwitch" type="CheckButton" parent="Scroll/VBC/HBC2"]
margin_left = 292.0
margin_right = 368.0
margin_bottom = 40.0

[node name="HBC3" type="HBoxContainer" parent="Scroll/VBC"]
visible = false
margin_top = 310.0
margin_right = 512.0
margin_bottom = 350.0

[node name="DisplayModeLabel" type="Label" parent="Scroll/VBC/HBC3"]
margin_top = 13.0
margin_right = 226.0
margin_bottom = 27.0
text = "Combine reaction / encounter text?"

[node name="DisplayModeSwitch" type="CheckButton" parent="Scroll/VBC/HBC3"]
margin_left = 230.0
margin_right = 306.0
margin_bottom = 40.0
pressed = true

[node name="HSeparator" type="HSeparator" parent="Scroll/VBC"]
margin_top = 628.0
margin_right = 512.0
margin_bottom = 632.0

[node name="SavePathDisplay" type="Label" parent="Scroll/VBC"]
margin_top = 636.0
margin_right = 512.0
margin_bottom = 650.0
autowrap = true

[connection signal="confirmed" from="ConfirmIFIDReset" to="." method="_on_ConfirmIFIDReset_confirmed"]
[connection signal="text_changed" from="Scroll/VBC/TitleEdit" to="." method="_on_TitleEdit_text_changed"]
[connection signal="text_changed" from="Scroll/VBC/AuthorEdit" to="." method="_on_AuthorEdit_text_changed"]
[connection signal="text_changed" from="Scroll/VBC/AboutTextEdit" to="." method="_on_AboutTextEdit_text_changed"]
[connection signal="text_changed" from="Scroll/VBC/MetaDescriptionEdit" to="." method="_on_MetaDescriptionEdit_text_changed"]
[connection signal="item_selected" from="Scroll/VBC/LanguageEdit" to="." method="_on_LanguageEdit_item_selected"]
[connection signal="item_selected" from="Scroll/VBC/RatingEdit" to="." method="_on_RatingEdit_item_selected"]
[connection signal="item_selected" from="Scroll/VBC/ThemeEdit" to="." method="_on_ThemeEdit_item_selected"]
[connection signal="item_selected" from="Scroll/VBC/FontEdit" to="." method="_on_FontEdit_item_selected"]
[connection signal="pressed" from="Scroll/VBC/HBC1/IFIDResetButton" to="." method="_on_IFIDResetButton_pressed"]
[connection signal="toggled" from="Scroll/VBC/HBC2/DBMSwitch" to="." method="_on_DBMSwitch_toggled"]
[connection signal="toggled" from="Scroll/VBC/HBC3/DisplayModeSwitch" to="." method="_on_DisplayModeSwitch_toggled"]
